[gd_scene load_steps=5 format=3 uid="uid://d1jxwr3w0dwo3"]

[ext_resource type="Script" uid="uid://d3ucbnr2v1o71" path="res://prefabs/dummy_bot/attack_dummy_area_3d.gd" id="1_gwwhp"]
[ext_resource type="Script" uid="uid://dkkimfebku13k" path="res://scripts/hit_info/hit_info_data.gd" id="2_smfaa"]

[sub_resource type="Resource" id="Resource_rnhog"]
script = ExtResource("2_smfaa")
name = "None"
amount_point = 2.0
type = "Physical"
metadata/_custom_type_script = "uid://dkkimfebku13k"

[sub_resource type="BoxShape3D" id="BoxShape3D_8qk05"]

[node name="MeleeHand" type="Area3D" node_paths=PackedStringArray("timer")]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_gwwhp")
timer = NodePath("Timer")
hit_info = SubResource("Resource_rnhog")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_8qk05")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
